Update customer segmentation for Retail or E-commerce.ipynb

--- a/customer segmentation for Retail or E-commerce.ipynb
+++ b/customer segmentation for Retail or E-commerce.ipynb
@@ -52,7 +52,7 @@
     "# Loads the dataset from your local path.\n",
     "# df.head() displays the first five rows to preview the data.\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\aarti\\OneDrive\\Documents\\Mall_Customers.csv\")\n",
+    "df = pd.read_csv(r\"C:\\Users\\aashu\\OneDrive\\Documents\\Mall_Customers.csv\")\n",
     "df.head()\n",
     "\n",
     "# Preprocess and select features\n",
