Update customer segmentation for Retail or E-commerce.ipynb

--- a/customer segmentation for Retail or E-commerce.ipynb
+++ b/customer segmentation for Retail or E-commerce.ipynb
@@ -211,7 +211,7 @@
     "\n",
     "# Loads the dataset from the specified path.\n",
     "\n",
-    "data = pd.read_csv(r\"C:\\Users\\aarti\\OneDrive\\Documents\\Mall_Customers.csv\")\n",
+    "data = pd.read_csv(r\"C:\\Users\\aashu\\OneDrive\\Documents\\Mall_Customers.csv\")\n",
     "\n",
     "# Displays the first few rows and summary info (column types, nulls, etc.)\n",
     "\n",
